@@ -1,1 +1,4 @@
+#if ##TABLE_DESC## ~ ^Z
+#else
 <small> <A href=##TABLE_URL##>##TABLE_DESC##</A></small>&nbsp;&nbsp;
+#fi
